syntax = "proto3";

package auth;

service AuthService {
  rpc Authenticate (AuthRequest) returns (AuthResponse) {}
  rpc ValidateToken (TokenRequest) returns (TokenValidationResponse) {}
  rpc RevokeToken (TokenRequest) returns (RevokeResponse) {}
}

message AuthRequest {
  string username = 1;
  string password = 2;
}

message AuthResponse {
  string token = 1;
}

message TokenRequest {
  string token = 1;
}

message TokenValidationResponse {
  bool is_valid = 1;
  string user_id = 2;
}

message RevokeResponse {
  bool success = 1;
}
